fix the position of hamburger menu on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,13 +8,17 @@
   display: flex;
 }
 
+.main {
+  width: 100%;
+  display: flex;
+}
+
 .react-datepicker__input-container > input {
   display: block;
   width: 100%;
   margin-right: 13px;
   margin-left: 3px;
-  background:
-    url(https://img.favpng.com/7/5/16/calendar-icon-png-favpng-rQvJKhTsVSgVg5BzW3ZSPGKmN.jpg)
+  background: url(https://img.favpng.com/7/5/16/calendar-icon-png-favpng-rQvJKhTsVSgVg5BzW3ZSPGKmN.jpg)
     no-repeat 100%;
   background-size: 30px;
   background-position: 99% 3px;
@@ -51,6 +55,19 @@ button {
 
   .App {
     display: block;
+  }
+
+  #mobile {
+    z-index: 1000;
+    opacity: 0.8;
+  }
+
+  .main {
+    position: absolute;
+    top: 0 !important;
+  }
+  .container-fluid {
+    margin-top: 5em;
   }
 }
 
